--- a/examples/LAquila-realdata/SlipInvSVD.in
+++ b/examples/LAquila-realdata/SlipInvSVD.in
@@ -1,7 +1,7 @@
 Data (1 = synthetic data, 0 = read from files, -1 = custom target model from a file)
 0
-Std.dev for slip rate (0 = no smoothing), Std.dev for GF's, GPS weight, M0 constraint weight, Weight of additional constraint
-1.d0  0.1  .1d0   1.d0   0.d0
+Std.dev for slip rate (0 = no smoothing), Std.dev for GF's, GPS weight, M0 constraint weight, Weight of additional constraint, smoothing aspect ratio
+1.d0  0.1  .1d0   1.d0   0.d0   1.
 Station component weights (1=no distance distance-dependent weights, 2=distance-dependent approximated CD)
 1
 Choice of use of eigenvectors (see further)
